--- a/index.html
+++ b/index.html
@@ -8,23 +8,17 @@
   </head>
   <body>
     <div class=hero>
-      <img class=hero-image src=images/hero.jpg alt="Danielle in the Windriver Range"/>
       <h1 class=hero-title>
-        Danielle Ahrens
+        <a href="index.html">Danielle Ahrens</a>
       </h1>
       <div class=hero-menu>
-        <div class=hero-menu-item>About</div>
-        <div class=hero-menu-item><a href="images/ahrens_resume.pdf" download>Resume</a></div>
+        <div class=hero-menu-item><a href="about.html">About</a></div>
+        <div class=hero-menu-item><a href="projects.html">Projects</a></div>
+        <div class=hero-menu-item><a href="images/ahrens_resume.pdf" download>Résumé</a></div>
         <div class=hero-menu-item><a class=hero-menu-item-link href="mailto:danielle.c.ahrens+websiteinquiry@gmail.com">Contact</a></div>
       </div>
       <div class=hero-menu-divider></div>
-    </div>
-    <div class=copy>
-      <h2>Manufacturing to Software: Engineering Better Lives</h2>
-      <p>With a passion for chemistry, programming and improving people's lives, I have spent 5 years in the medical device manufacturing industry and most recently the last year and a half in software development.</p>
-      <p>Being a Manufacturing Engineer for an organic chemistry manufacturing line taught me the analytical, problem solving and leadership skills applicable in all areas of engineering.</p>
-      <p>When an opportunity came to switch career paths and have an outsized impact on the future of the world, I jumped at the chance to put my skills to use for the Biden for President campaign.</p>
-      <p>Currently residing in the deep North woods, I'm looking to continue developing my programming and leadership skills at a remote first/remote friendly organization.</p>
+      <img class=hero-image src=images/hero.jpg alt="Danielle and her dog in the woods"/>
     </div>
   </body>
   <footer>
