moving images around, text edits

--- a/projects.html
+++ b/projects.html
@@ -20,10 +20,9 @@
       <div class=hero-menu-divider></div>
       <div class=copy>
         <h2>Cenozoa: an IoT Farm Platform</h2>
-        <img class=hero-image src=images/landing_page.png alt=""/>
-        <img class=hero-image src=images/cenozoa_diagram.png alt=""/>
         <p class=blog-copy>*record scratch* *freeze frame* Yup, that's me. You're probably wondering how I ended up self-hosting my own custom built web application platform with fully integrated, specially made IoT devices.</p>
-        <p class=blog-copy>Well, it all started with a desire to increase my self-sufficency and lower my environmental impact which led me to start a sustainable mini-farm. As I studied about various farming techniques, I realized something: farming is <i>a lot</i> of work. It takes daily monitoring to keep a farm running smoothly and efficiently:</p>
+        <img class=hero-image src=images/cenozoa_diagram.png alt=""/>
+        <p class=blog-copy>Well, it all started with a desire to increase my self-sufficency and lower my environmental impact by starting a sustainable mini-farm. As I studied about various farming techniques, I realized something: farming is <i>a lot</i> of work. It takes daily monitoring to keep a farm running smoothly and efficiently:</p>
         <p class=blog-copy>
           <ul class=blog-unordered-list>
             <li>Keep your plants happy by properly irrigating your soil</li>
@@ -43,6 +42,7 @@
           <li>Some systems just don't exist: where could I find a system that will open and close a cold frame depending on the temperature and/or the amount of snow covering the window?</li>
         </ol>
         <p class=blog-copy>As I considered this, my software engineering mind realized that I could just build my own high-tech, fully integrated system exactly to my needs. And so I did. From the hand assembled hardware and firmware, to the self-hosted web server, database and user interface, the Cenozoa IoT Farm Platform is soup to nuts custom built for me, by me.</p>
+        <img class=hero-image src=images/landing_page.png alt=""/>
         <p class=blog-copy>Starting with a simple temperature and humidity monitoring and alerting system, this platform will grow to include custom built irrigation systems for garden beds, a temperature and moisture monitoring system for compost piles, automated temperature and light level controls for winter growing in cold frames and automated doors and heating of a chicken coop. The status of all these sensors can all be easily viewed and adjusted through one portal.</p>
         <p class=blog-copy>Curious about how it all works? Take a deeper dive:
           <ul class=blog-unordered-list>
