--- a/src/about.html
+++ b/src/about.html
@@ -5,6 +5,15 @@
     <link rel="shortcut icon" type="image/jpg" href="images/tree-solid.svg"/>
     <link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen"/>
     <script src="https://kit.fontawesome.com/3b15d3b646.js" crossorigin="anonymous"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LJV0ZGP57D"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-LJV0ZGP57D');
+    </script>
   </head>
   <body>
     <div class=hero>
@@ -14,7 +23,7 @@
       <div class=hero-menu>
         <div class=hero-menu-item><a href="">About</a></div>
         <div class=hero-menu-item><a href="projects.html">Projects</a></div>
-        <div class=hero-menu-item><a href="images/ahrens_resume.pdf" download>Résumé</a></div>
+        <div class=hero-menu-item><a href="images/ahrens_resume.pdf" download>Re&#769;sume&#769;</a></div>
         <div class=hero-menu-item><a class=hero-menu-item-link href="mailto:danielle.c.ahrens+websiteinquiry@gmail.com">Contact</a></div>
       </div>
       <div class=hero-menu-divider></div>
