adjusting projects structure

--- a/src/projects.html
+++ b/src/projects.html
@@ -28,41 +28,11 @@
       </div>
       <div class=hero-menu-divider></div>
       <div class=copy>
-        <h2>Cenozoa: an IoT Farm Platform</h2>
-        <p class=blog-copy>*record scratch* *freeze frame* Yup, that's me. You're probably wondering how I ended up self-hosting my own custom built web application platform with fully integrated, specially made IoT devices.</p>
+        <p class=blog-title><b>Cenozoa:</b> A self-hosted IoT platform for monitoring all aspects of a self-sufficent farm</p>
+        <p class=blog-date><i>Posted: February 25th, 2021</i></p>
         <img class=hero-image src=images/cenozoa_diagram.png alt=""/>
-        <p class=blog-copy>Well, it all started with a desire to increase my self-sufficency and lower my environmental impact by starting a sustainable mini-farm. As I studied about various farming techniques, I realized something: farming is <i>a lot</i> of work. It takes daily monitoring to keep a farm running smoothly and efficiently:</p>
-        <p class=blog-copy>
-          <ul class=blog-unordered-list>
-            <li>Keep your plants happy by properly irrigating your soil</li>
-            <li>Maintain the proper temperature in the cold frames by opening and closing vents</li>
-            <li>Don't allow snow to build up on your cold frames starving your cold weather plants of light</li>
-            <li>Maintain the right temperature and humidity for optimal long-term storage of harvested produce</li>
-            <li>Ensure efficient decomposition of your garden waste by getting your compost bin up to the proper temperature and properly modulating the moisture</li>
-            <li>Let the chickens out to roam daily and put them back in the coop for safe keeping</li>
-            <li>Make sure the chickens don't freeze in the winter</li>
-          </ul>
-        </p>
-        <p class=blog-copy>My manufacturing engineering mind immediately began to wonder: how many of these tasks could be automated? There are, of course, many off-the-shelf solutions that could help: automated irrigation systems, IoT temperature monitors, even a modified internet connected garage door opener could possibly be used on a chicken coop. But these off-the-shelf solutions:</p>
-        <ol class=blog-unordered-list>
-          <li>Are expensive</li>
-          <li>Wouldn't have a single unified platform to manage everything</li>
-          <li>Have privacy concerns: where exactly is all this data going? Is it secure?</li>
-          <li>Some systems just don't exist: where could I find a system that will open and close a cold frame depending on the temperature and/or the amount of snow covering the window?</li>
-        </ol>
-        <p class=blog-copy>As I considered this, my software engineering mind realized that I could just build my own high-tech, fully integrated system exactly to my needs. And so I did. From the hand assembled hardware and firmware, to the self-hosted web server, database and user interface, the Cenozoa IoT Farm Platform is soup to nuts custom built for me, by me.</p>
-        <img class=hero-image src=images/landing_page.png alt=""/>
-        <p class=blog-copy>Starting with a simple temperature and humidity monitoring and alerting system, this platform will grow to include custom built irrigation systems for garden beds, a temperature and moisture monitoring system for compost piles, automated temperature and light level controls for winter growing in cold frames and automated doors and heating of a chicken coop. The status of all these sensors can all be easily viewed and adjusted through one portal.</p>
-        <p class=blog-copy>Curious about how it all works? Take a deeper dive:
-          <ul class=blog-unordered-list>
-            <li>Web server: <a class=blog-link href="https://github.com/danielleahrens/cenozoa">github.com/danielleahrens/cenozoa</a></li>
-            <li>User interface: <a class=blog-link href="https://github.com/danielleahrens/attenborough">github.com/danielleahrens/attenborough</a></li>
-            <li>Sensor firmware: <a class=blog-link href="https://github.com/danielleahrens/batCave">github.com/danielleahrens/batCave</a></li>
-          </ul>
-        </p>
-        <p class=blog-copy>
-          Check back in the future for more details about each of the components of this system!
-        </p>
+        <p class=blog-teaser>An introduction to the Cenozoa IoT Farm Platform: so you're probably wondering how I got here...</p>
+        <a class=blog-read-more  href="projects/cenozoa/intro.html">Read More ></a>
       </div>
     </div>
   </body>
