--- a/src/about.html
+++ b/src/about.html
@@ -29,11 +29,11 @@
       <div class=hero-menu-divider></div>
     </div>
     <div class=copy>
-      <h2>Manufacturing to Software: Engineering Better Lives</h2>
-      <p>With a passion for chemistry, programming and improving people's lives, I have spent 5 years in the medical device manufacturing industry and most recently the last two years in software development.</p>
-      <p>Being a Manufacturing Engineer for an organic chemistry manufacturing line taught me the analytical, problem solving and leadership skills applicable in all areas of engineering.</p>
-      <p>When an opportunity came to switch career paths and have an outsized impact on the future of the world, I jumped at the chance to put my skills to use for the Biden for President campaign.</p>
-      <p>Currently residing in the deep North woods, I'm looking to continue developing my programming and leadership skills at a remote first/remote friendly organization. Feel free to reach out.</p>
+      <h2>Engineering Better Lives</h2>
+      <p>With a passion for science, technology, and improving people's lives, I led a team of engineers through the general election as an Engineering Lead for the Biden for President campaign. Prior to that, in the primary I built applications that were foundational to the success of the Biden campaign and were relied upon through election day.</p>
+      <p>Before my sojourn into political tech, I was helping save lives as a Manufacturing Engineer at Boston Scientific, a medical device manufacturer. There I was the line owner for an organic chemistry line which produced embolic polymer microspheres used for treating liver cancer.</p>
+      <p>No matter the engineering context, I have the analytical, problem solving and leadership skills to solve the toughest engineering problems.</p>
+      <p>Currently residing in the deep North woods, I'm looking to continue practicing my programming and leadership skills at a remote first/remote friendly organization. Feel free to <a class=blog-link href="mailto:danielle.c.ahrens+websiteinquiry@gmail.com">contact me</a>.</p>
     </div>
   </body>
   <footer>
