fixing links, adjusting blog post content

--- a/src/projects/cenozoa/intro.html
+++ b/src/projects/cenozoa/intro.html
@@ -18,7 +18,7 @@
   <body>
     <div class=hero>
       <h1 class=hero-title>
-        <a href="index.html">Danielle Ahrens</a>
+        <a href="../../index.html">Danielle Ahrens</a>
       </h1>
       <div class=hero-menu>
         <div class=hero-menu-item><a href="../../about.html">About</a></div>
@@ -28,7 +28,8 @@
       </div>
       <div class=hero-menu-divider></div>
       <div class=copy>
-        <h2>Cenozoa: an IoT Farm Platform</h2>
+        <p class=blog-title><b>Cenozoa: an IoT Farm Platform</b></p>
+        <p class=blog-date><i>Posted: February 25th, 2021</i></p>
         <p class=blog-copy>*Record scratch* *freeze frame* yup, that's me. You're probably wondering how I ended up self-hosting my own custom built web application platform with fully integrated, specially made IoT devices.</p>
         <img class=hero-image src=../../images/cenozoa_diagram.png alt=""/>
         <p class=blog-copy>Well, it all started with a desire to increase my self-sufficency and lower my environmental impact by starting a sustainable mini-farm. As I studied about various farming techniques, I realized something: farming is <i>a lot</i> of work. It takes daily monitoring to keep a farm running smoothly and efficiently:</p>
