fixing missing favicon

--- a/src/projects/cenozoa/intro.html
+++ b/src/projects/cenozoa/intro.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Danielle Ahrens</title>
-    <link rel="shortcut icon" type="image/jpg" href="images/tree-solid.svg"/>
+    <link rel="shortcut icon" type="image/jpg" href="../../images/tree-solid.svg"/>
     <link rel="stylesheet" type="text/css" href="../../stylesheet.css" media="screen"/>
     <script src="https://kit.fontawesome.com/3b15d3b646.js" crossorigin="anonymous"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
