adding post to projects page

--- a/src/projects.html
+++ b/src/projects.html
@@ -28,12 +28,19 @@
       </div>
       <div class=hero-menu-divider></div>
       <div class=copy>
+        <p class=blog-title><b>Presidential Election 2020:</b> Frontend Development Archive</p>
+        <p class=blog-date><i>Posted: March 14th, 2021</i></p>
+        <p class=blog-teaser>An archive list of all the JoeBiden.com pages and microsites produced by the Biden for President campaign during the primary and the general election.</p>
+        <a class=blog-read-more  href="projects/campaign/websiteslist.html">Read More ></a>
+      </div>
+      <div class=copy>
         <p class=blog-title><b>Cenozoa:</b> A self-hosted IoT platform for monitoring all aspects of a self-sufficent farm</p>
         <p class=blog-date><i>Posted: February 25th, 2021</i></p>
         <img class=hero-image src=images/cenozoa_diagram.png alt=""/>
         <p class=blog-teaser>An introduction to the Cenozoa IoT Farm Platform: so you're probably wondering how I got here...</p>
         <a class=blog-read-more  href="projects/cenozoa/intro.html">Read More ></a>
       </div>
+
     </div>
   </body>
   <footer>
